--- a/view-usuario/src/app/components/login/login.component.html
+++ b/view-usuario/src/app/components/login/login.component.html
@@ -9,12 +9,12 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<form (click)="cambioEstado(mostrarP)">
+				<form #loginForm="ngForm" (click)="cambioEstado(logonForom)">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="email">
+						<input type="text" name="email" class="form-control" placeholder="email">
 						
 					</div>
 					<div class="input-group form-group">
