--- a/view-usuario/src/app/components/login/login.component.html
+++ b/view-usuario/src/app/components/login/login.component.html
@@ -1,35 +1,37 @@
 	<div class="d-flex justify-content-center h-100" *ngIf="login">
-		<div class="card">
-			<div class="card-header">
-				<h3>Sign In</h3>
-				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fab fa-facebook-square"></i></span>
-					<span><i class="fab fa-google-plus-square"></i></span>
-					<span><i class="fab fa-twitter-square"></i></span>
-				</div>
-			</div>
-			<div class="card-body">
-				<form #loginForm="ngForm" (click)="cambioEstado(logonForom)">
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
-						</div>
-						<input type="text" name="email" class="form-control" placeholder="email">
-						
-					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-						<input type="password" class="form-control" placeholder="password">
-					</div>
-					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
-					</div>
-				</form>
-			</div>
-		</div>
-  </div>
-  <div *ngIf="principal">
-    <app-principal></app-principal>
-  </div>
+	  <div class="card">
+	    <div class="card-header">
+	      <h3>Sign In</h3>
+	      <div class="d-flex justify-content-end social_icon">
+	        <span><i class="fab fa-facebook-square"></i></span>
+	        <span><i class="fab fa-google-plus-square"></i></span>
+	        <span><i class="fab fa-twitter-square"></i></span>
+	      </div>
+	    </div>
+	    <div class="card-body">
+	      <form #loginForm="ngForm">
+	        <div class="input-group form-group">
+	          <div class="input-group-prepend">
+	            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+	          </div>
+	          <input type="text" name="email" id="email" class="form-control" #email="ngModel"
+	            [(ngModel)]="usuarioService.seleccionarUsuario.email" placeholder="email">
+
+	        </div>
+	        <div class="input-group form-group">
+	          <div class="input-group-prepend">
+	            <span class="input-group-text"><i class="fas fa-key"></i></span>
+	          </div>
+	          <input type="password" name="password" id="password" class="form-control" #password="ngModel"
+	            [(ngModel)]="usuarioService.seleccionarUsuario.password" placeholder="password">
+	        </div>
+	        <div class="form-group">
+	          <input type="submit" value="Login" class="btn float-right login_btn" (click)="cambioEstado(loginForm)">
+	        </div>
+	      </form>
+	    </div>
+	  </div>
+	</div>
+	<div *ngIf="principal">
+	  <app-principal></app-principal>
+	</div>
