funcion para borra login al validar

--- a/view-usuario/src/app/components/principal/principal.component.html
+++ b/view-usuario/src/app/components/principal/principal.component.html
@@ -37,8 +37,10 @@
                   <div class="card-body">
                     <h5 class="card-title">Correo: {{usuario.email}}</h5>
                     <p class="card-text">Password: {{usuario.password}}</p>
-                    <a href="#" class="btn btn-primary" (click)="editarUsuario(usuario)">Actualizar</a>
-                    <a href="#" class="btn btn-danger" (click)="eliminarUsuario(usuario.id, registroForm)">Eliminar</a>
+                    <div class="pt-3">
+                        <a href="#" class="btn btn-primary" (click)="editarUsuario(usuario)">Actualizar</a>
+                        <a href="#" class="btn btn-danger" (click)="eliminarUsuario(usuario.id, registroForm)">Eliminar</a>
+                    </div>
                   </div>
                 </div>
               <div class="col-md-1"></div>
